using System.Collections;
using System.Collections.Generic;
using UnityEngine;
using UnityEngine.UI;
using UnityEngine.AI;
using UnityEngine.Events;
using Sirenix.OdinInspector;
using Sirenix.Serialization;

namespace EllGames.GF.Meta
{
    public enum EXCEPTION_TYPE
    {
        UnregisteredSkillException
    }
}